--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "semi": [1, "always"]
+        "semi": [1, "always"],
+        "@typescript-eslint/no-explicit-any": "warn"
     }
 }
