--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
     "html-webpack-plugin": "^5.5.0",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.0",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3"
   }
 }
