--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:prod": "webpack --mode=production --node-env=production && node ./dist/index.js",
     "start:dev": "nodemon ./src/index.ts",
-    "build:prod": "webpack --mode=production --node-env=production"
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,19 @@
   },
   "homepage": "https://github.com/freczz/nodejs-crud-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "@webpack-cli/generators": "^3.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
-    "html-webpack-plugin": "^5.5.0",
-    "node-fetch": "^3.3.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
@@ -44,7 +47,6 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.0",
-    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3"
   }
 }
